# template-agentmail-docbot

./: .env-sample  README.md  blaxel.toml  pyproject.toml
.blaxel/: agentmail.yaml  context7.yaml  openai.yaml
src/: agent.py
src/server/: router.py
