[project]
name = "docbot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentmail>=0.0.38",
    "asgi-correlation-id>=4.3.4",
    "blaxel[openai,telemetry]==0.2.26",
    "fastapi[standard]>=0.115.12",
    "markdown>=3.8.2",
    "rich>=13.9.4",
    "svix>=1.68.0",
]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
